--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ npm-debug.log
 # we ignore priv/static. You may want to comment
 # this depending on your deployment strategy.
 /priv/static/
+
+# language server workdir for Elixir
+.elixir_ls
