--- a/assets/package.json
+++ b/assets/package.json
@@ -15,6 +15,7 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.10",
     "babel-loader": "^8.2.2",
+    "chokidar": "^3.5.1",
     "copy-webpack-plugin": "^5.1.2",
     "css-loader": "^3.6.0",
     "mini-css-extract-plugin": "^0.9.0",
